 * Server Feature: Allow setting web admin auth through DRAWPILESRV_WEB_ADMIN_AUTH environment variable. The --web-admin-auth parameter takes precedence.
 * Fix: Show the fill tool size limit rectangle even when the outline width is set to zero pixels. Thanks Blozzom for reporting.
 * Server Fix: Show an error message if listing on a certain server is not allowed.
 * Fix: Unlist sessions more reliably when terminating sessions hosted "on this computer".
 * Fix: Don't select a newly created layer when there's a default layer.
 * Fix: Give the timeline dock a sensible minimum height. Thanks Kink for reporting.
 * Fix: Make notification sounds work in the AppImage release. Thanks anonymous for reporting.

2023-12-08 Version 2.2.0-beta.11
 * Server Fix: No longer show "cannot look up one session and then join another" when joining a session with an ID alias. Thanks Kink and Fabian for finding this.
 * Fix: Actually disable brush taking in 2.1 sessions, last attempt didn't stick. Thanks again Blozzom for reporting.
 * Fix: Also show mute notifications action when right-clicking the chat. Thanks Blozzom for reporting.
 * Fix: Make brush palette less immensely slow. Thanks lowontrash for reporting.
 * Fix: Show kick and ban messages in the correct order, without duplicates. Thanks xxxx for reporting.
 * Fix: Force the canvas to refresh on resize even harder because some systems still get artifacts. Thanks xxxx for reporting.
 * Fix: Default the mouse wheel to pan the canvas on macOS instead of zooming it, since that makes more sense for its two-dimensional scroll wheels. Thanks Charmandrigo for reporting.
 * Fix: Make Apple Magic Trackpad and hopefully other touch pads work. Thanks Charmandrigo for reporting and helping figure this out.
 * Fix: Add a close button to the tablet tester, playback, event log and flipbook dialogs so that it can be closed on Android and other systems without window decorations without having to press some button or key combination.